--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 *.DS_Store
 
+.obsidian/app.json
+.obsidian/appearance.json
+.obsidian/core-plugins.json
+.obsidian/hotkeys.json
+.obsidian/workspace.json
